@@ -3,6 +3,7 @@ WPS bruteforce PIN attacks (reaver and bully)
 New system for arm architecture detection
 Compatibility extended to Parrot arm version on Raspberry Pi
 Some WPS attacks improvements
+Extended hashcat compatibility for v3.0 or higher
 
 5.0
 WPS attacks menu added
